# gitx

./: .goreleaser.yml  404.html  README.md  go.mod  go.sum  index.html  justfile  main.go  mkdocs.yml  pyproject.toml  setup.cfg  sitemap.xml
.github/workflows/: CI.yml  ci-lint.yml  docs.yml
cmd/gitx/: main.go
contributing/development/: index.html
contributing/guidelines/: index.html
docs/: index.md
docs/contributing/: development.md  guidelines.md
docs/stylesheets/: extra.css
docs/tutorial/basics/: version-control.md
docs/usage/: basic-commands.md  getting-started.md
installation/: index.html
internal/git/: branch.go  clone.go  commit.go  diff.go  files.go  git.go  git_test.go  init.go  init_test.go  log.go  merge.go  remote.go  repo.go  stage.go  stash.go  status.go  tag.go  testing.go
internal/log/: gitxlog.go  log.go
internal/tui/: config.go  constants.go  keys.go  model.go  model_test.go  theme.go  update.go  view.go
search/: search_index.json
stylesheets/: extra.css
tutorial/basics/committing/: index.html
tutorial/basics/history/: index.html
tutorial/basics/repositories/: index.html
tutorial/basics/version-control/: index.html
tutorial/branches/concepts/: index.html
tutorial/branches/conflicts/: index.html
tutorial/branches/creating-switching/: index.html
tutorial/branches/merging/: index.html
tutorial/introduction/: index.html
tutorial/remote/pull-request/: index.html
tutorial/remote/push-pull/: index.html
tutorial/remote/remotes/: index.html
usage/basic-commands/: index.html
usage/getting-started/: index.html
