[project]
name = "gitx"
version = "0.1.0-a1"
description = "TUI based git helper"
authors = [
    { name = "Ayush", email = "mail@ayuch.dev" },
    { name = "Ashmit Singh", email = "ashmit9955@gmail.com" },
    { name = "Anmol Puri", email = "anmolpuri954@gmail.com" },
    { name = "Anmol Kakkar", email = "anmolarora0014@gmail.com" },
]
license = { text = "LICENSE" }
readme = "README.md"
requires-python = ">=3.9, <4.0"
dependencies = ["textual (>=2.1.2,<3.0.0)"]

# [tool.poetry]
# package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
flake8 = "^7.1.2"
autopep8 = "^2.3.2"
autoflake = "^2.3.1"
isort = "^6.0.1"
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.9"
materialx = "^1.39.3"
pymdown-extensions = "^10.14.3"
material = "^0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
